compare std of redshift pdf
1.calculate redshift pdf for each cell on the all-sky som
2.compare original one and the new combined one

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ab1b3cc3-e5de-40d1-b672-e569faff611d",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6b7875d2-65b5-4a64-9c97-2fce0fceea4e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "d679bffe-3562-4dcc-8f21-3d209da91f47",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "f81d97e9-74bb-4375-99c1-2fedaaf3e296",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "517f34a8-0b5f-457c-b2d9-7e0b8068a04b",
    "metadata": {},
    "outputs": [],
@@ -358,19 +358,19 @@
     "        plt.title(\"Redshift STD Histogram\")\n",
     "        plt.xlabel(r\"$\\sigma_z / (1+<z>)$\")\n",
     "        plt.ylabel(\"# of galaxies\")\n",
-    "        if save_diagram != False:\n",
+    "        if save_diagram:\n",
     "            plt.savefig(\"D:/SPHEREx_SOM/record/4th_exploration/std_map/\" + file.split(\"/\")[-1].replace(\".pkl\", \"\") + \"_\" + \"std_map.jpg\", bbox_inches = \"tight\")\n",
     "        plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "id": "4378188a-209f-4d3a-8910-c3cc8bc75057",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mapping(shallow_file, deep_file, shallow_data, deep_data, shallow_err, deep_err, shallow_position, info_data, save_diagram = False):\n",
+    "def mapping(shallow, deep, shallow_data, deep_data, shallow_err, deep_err, shallow_position, info_data, save_diagram = False, show_diagram = True, check_data = False):\n",
     "    def luptitude(data, err, b_scale):\n",
     "        lupmag = -np.arcsinh(data / (2 * b_scale  * err))\n",
     "        proc_err = np.absolute(-1 / (2 * b_scale  * shallow_err) / np.sqrt((data / (2 * b_scale * err)) ** 2 + 1) * err)\n",
@@ -378,12 +378,6 @@
     "        proc_err = proc_err / np.std(lupmag, ddof = 1, axis=0)\n",
     "\n",
     "        return proc_data, proc_err\n",
-    "        \n",
-    "    with open(shallow_file, \"rb\") as fh:\n",
-    "        shallow = pickle.load(fh)\n",
-    "\n",
-    "    with open(deep_file, \"rb\") as fh:\n",
-    "        deep = pickle.load(fh)\n",
     "        \n",
     "    shallow_som = shallow[\"som\"]\n",
     "    deep_som = deep[\"som\"]\n",
@@ -395,16 +389,17 @@
     "    \n",
     "    shallow_proc_data, shallow_proc_err = luptitude(data = shallow_data, err = shallow_err, b_scale = shallow_b_scale )\n",
     "    deep_proc_data, deep_proc_err = luptitude(data = deep_data, err = deep_err, b_scale = deep_b_scale )\n",
-    "    \n",
-    "    print(f\"Topo err: {shallow_som.topographic_error(shallow_proc_data)}\")\n",
-    "    print(f\"Quan err: {shallow_som.quantization_error(shallow_proc_data)}\")\n",
-    "    print(f\"Topo err: {shallow[\"topo_err\"]}\")\n",
-    "    print(f\"Quan err: {shallow[\"quan_err\"]}\")\n",
     "\n",
-    "    print(f\"Topo err: {deep_som.topographic_error(deep_proc_data)}\")\n",
-    "    print(f\"Quan err: {deep_som.quantization_error(deep_proc_data)}\")\n",
-    "    print(f\"Topo err: {deep[\"topo_err\"]}\")\n",
-    "    print(f\"Quan err: {deep[\"quan_err\"]}\")\n",
+    "    if check_data:\n",
+    "        print(f\"Topo err: {shallow_som.topographic_error(shallow_proc_data)}\")\n",
+    "        print(f\"Quan err: {shallow_som.quantization_error(shallow_proc_data)}\")\n",
+    "        print(f\"Topo err: {shallow[\"topo_err\"]}\")\n",
+    "        print(f\"Quan err: {shallow[\"quan_err\"]}\")\n",
+    "    \n",
+    "        print(f\"Topo err: {deep_som.topographic_error(deep_proc_data)}\")\n",
+    "        print(f\"Quan err: {deep_som.quantization_error(deep_proc_data)}\")\n",
+    "        print(f\"Topo err: {deep[\"topo_err\"]}\")\n",
+    "        print(f\"Quan err: {deep[\"quan_err\"]}\")\n",
     "\n",
     "    if len(list(list(shallow[\"prop_map\"].items())[0][1].keys())[0]) != 3:\n",
     "        shallow_labels_map = shallow_som.labels_map(shallow_proc_data, shallow_proc_err, tuple(map(tuple, np.concatenate((np.expand_dims(info_data[\"HSC_i_MAG\"].values, axis = 1), np.expand_dims(info_data[\"z_true\"].values, axis = 1), np.expand_dims(np.array([i for i in range(0, shallow_proc_data.shape[0])]), axis = 1)), axis = -1))))\n",
@@ -430,59 +425,79 @@
     "    else:\n",
     "        deep_labels_map = deep[\"prop_map\"]\n",
     "\n",
-    "    z_range = np.linspace(np.min(info_data[\"z_true\"]), np.max(info_data[\"z_true\"]), 1000)\n",
-    "    \n",
+    "    z_range = np.linspace(-0.5, 4, 2000)\n",
+    "\n",
+    "    skip = True\n",
     "    for i in shallow_labels_map.keys():\n",
     "        if i == shallow_position:\n",
     "            shallow_properties = np.array(list(shallow_labels_map[shallow_position].keys()))\n",
     "            indices = shallow_properties[:, 2].astype(np.int32)\n",
     "            shallow_density = gaussian_kde(shallow_properties[:, 1])\n",
+    "            skip = False\n",
     "\n",
-    "    mapped_cells = []\n",
-    "    for i in indices:\n",
-    "        mapped_cells.append(deep_som.winner(deep_proc_data[i], deep_proc_err[i]))\n",
-    "\n",
-    "    deep_position, counts = np.unique(np.array(mapped_cells), return_counts = True, axis = 0)\n",
+    "        \n",
+    "    if not skip:\n",
+    "        mapped_cells = []\n",
+    "        for i in indices:\n",
+    "            mapped_cells.append(deep_som.winner(deep_proc_data[i], deep_proc_err[i]))\n",
     "    \n",
-    "    deep_pdfs = []\n",
-    "    for i in range(0, len(deep_position)):\n",
-    "        deep_properties = np.array(list(deep_labels_map[tuple(deep_position[i])].keys()))\n",
-    "        deep_density = gaussian_kde(deep_properties[:, 1])\n",
-    "        deep_pdfs.append(deep_density(z_range))\n",
+    "        deep_position, counts = np.unique(np.array(mapped_cells), return_counts = True, axis = 0)\n",
+    "        \n",
+    "        deep_pdfs = []\n",
+    "        weights = []\n",
+    "        for i in range(0, len(deep_position)):\n",
+    "            deep_properties = np.array(list(deep_labels_map[tuple(deep_position[i])].keys()))\n",
+    "            if len(deep_properties[:, 1]) > 1:\n",
+    "                deep_density = gaussian_kde(deep_properties[:, 1])\n",
+    "                deep_pdfs.append(deep_density(z_range))\n",
+    "                weights.append(counts[i])\n",
+    "            else:\n",
+    "                pass\n",
+    "            \n",
+    "            if show_diagram:\n",
+    "                plt.close()\n",
+    "                plt.plot(z_range, deep_density(z_range), lw = 3)\n",
+    "                plt.xlabel(\"Spectroscopic Redshift\")\n",
+    "                plt.ylabel(\"Probability Density\")\n",
+    "                plt.title(f\"Position: {deep_position[i]} in Deep SOM Weight: {weights[i]}\")\n",
+    "                if save_diagram:\n",
+    "                    plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/deep_{deep_position[i]}.jpg\", bbox_inches = \"tight\")\n",
+    "                plt.show()\n",
+    "            \n",
+    "        combined_pdf = (weights / np.sum(weights)).reshape(-1, 1) * np.array(deep_pdfs)\n",
     "        \n",
     "        plt.close()\n",
-    "        plt.plot(z_range, deep_density(z_range), lw = 3)\n",
-    "        plt.xlabel(\"Spectroscopic Redshift\")\n",
-    "        plt.ylabel(\"Probability Density\")\n",
-    "        plt.title(f\"Position: {deep_position[i]} in Deep SOM Weight: {counts[i]}\")\n",
-    "        if save_diagram != False:\n",
-    "            plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/deep_{deep_position[i]}.jpg\", bbox_inches = \"tight\")\n",
-    "        plt.show()\n",
-    "        \n",
-    "    combined_pdf = (counts / np.sum(counts)).reshape(-1, 1) * np.array(deep_pdfs)\n",
+    "        if show_diagram:\n",
+    "            for i in combined_pdf:\n",
+    "                plt.plot(z_range, i, lw = 1, alpha = 0.4, c = \"k\")\n",
+    "            plt.plot(z_range, np.sum(combined_pdf , axis = 0), lw = 2, c = \"k\")\n",
+    "            plt.xlabel(\"Spectroscopic Redshift\")\n",
+    "            plt.ylabel(\"Probability Density\")\n",
+    "            plt.title(f\"Combined PDFs from Deep SOM\")\n",
+    "            if save_diagram:\n",
+    "                plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/combined_{shallow_position}.jpg\", bbox_inches = \"tight\")\n",
+    "            plt.show()\n",
+    "            \n",
+    "        if show_diagram:\n",
+    "            plt.plot(z_range, shallow_density(z_range), lw = 2, c = \"r\", label = \"Original PDF\")\n",
+    "            plt.plot(z_range, np.sum(combined_pdf , axis = 0), lw = 2, c = \"k\", label = \"Combined PDF\")\n",
+    "            plt.xlabel(\"Spectroscopic Redshift\")\n",
+    "            plt.ylabel(\"Probability Density\")\n",
+    "            plt.title(f\"PDF Comparison\")\n",
+    "            plt.legend()\n",
+    "            if save_diagram:\n",
+    "                plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/pdf_comparison.jpg\", bbox_inches = \"tight\")\n",
+    "            plt.show()\n",
     "    \n",
-    "    plt.close()\n",
-    "    for i in combined_pdf:\n",
-    "        plt.plot(z_range, i, lw = 1, alpha = 0.4, c = \"k\")\n",
-    "    plt.plot(z_range, np.sum(combined_pdf , axis = 0), lw = 2, c = \"k\")\n",
-    "    plt.xlabel(\"Spectroscopic Redshift\")\n",
-    "    plt.ylabel(\"Probability Density\")\n",
-    "    plt.title(f\"Combined PDFs from Deep SOM\")\n",
-    "    if save_diagram != False:\n",
-    "        plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/combined_{shallow_position}.jpg\", bbox_inches = \"tight\")\n",
-    "    plt.show()\n",
+    "        exp_value_shallow = np.sum(shallow_density(z_range) * (z_range[1] - z_range[0]) * z_range)\n",
+    "        exp_value_deep = np.sum(np.sum(combined_pdf , axis = 0) * (z_range[1] - z_range[0]) * z_range)\n",
+    "    \n",
+    "        std_shallow = np.sqrt(np.sum((z_range - exp_value_shallow) ** 2 * shallow_density(z_range) * (z_range[1] - z_range[0])))\n",
+    "        std_deep = np.sqrt(np.sum((z_range - exp_value_deep) ** 2 * np.sum(combined_pdf , axis = 0) * (z_range[1] - z_range[0])))\n",
     "\n",
-    "    plt.plot(z_range, shallow_density(z_range), lw = 2, c = \"r\", label = \"Original PDF\")\n",
-    "    plt.plot(z_range, np.sum(combined_pdf , axis = 0), lw = 2, c = \"k\", label = \"Combined PDF\")\n",
-    "    plt.xlabel(\"Spectroscopic Redshift\")\n",
-    "    plt.ylabel(\"Probability Density\")\n",
-    "    plt.title(f\"PDF Comparison\")\n",
-    "    plt.legend()\n",
-    "    if save_diagram != False:\n",
-    "        plt.savefig(f\"D:/SPHEREx_SOM/record/5th_exploration/mapping/pdf_comparison.jpg\", bbox_inches = \"tight\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    return deep_position, deep_pdfs, combined_pdf"
+    "        return (skip, deep_position, np.sum(combined_pdf , axis = 0), std_shallow, std_deep)\n",
+    "    else:\n",
+    "        return (skip, 0)"
    ]
   },
   {
@@ -556,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "id": "1702c2b3-f830-4e6a-b9f7-4fb4252bf26a",
    "metadata": {},
    "outputs": [
@@ -564,9 +579,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_85192\\2517715244.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24760\\2517715244.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  shallow_info = df_L3_info[-pd.DataFrame(data_all[:, 0::2]).isna()[0]]\n",
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_85192\\2517715244.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24760\\2517715244.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  deep_info = df_L3_info[-pd.DataFrame(data_deep[:, 0::2]).isna()[0]]\n"
      ]
     }
@@ -640,38 +655,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b656081-a83b-4fd7-a53e-a0ef5e063a13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colormap = plt.cm.autumn\n",
-    "for i in range(len(weights[0:11])):\n",
-    "    try:\n",
-    "        plt.plot(data_1sig[:, 0], weights[0:11][10 - i], c = colormap((10 - i) / len(weights[0:11])))\n",
-    "    except:\n",
-    "        pass\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c967f92-8622-4212-a5d3-4065942daecd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colormap = plt.cm.autumn\n",
-    "for i in range(len(weights[10:20])):\n",
-    "    try:\n",
-    "        plt.plot(data_1sig[:, 0], weights[10:20][9 - i], c = colormap((9 - i) / len(weights[10:20])))\n",
-    "    except:\n",
-    "        pass\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2e661da9-58e5-437a-86a8-0deebdeeda4f",
    "metadata": {},
    "outputs": [],
@@ -691,22 +674,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "daeabd9d-29af-470e-acb7-8b373b60fef9",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "mapped_cells, deep_pdfs, combined_pdf = mapping(shallow_file = \"D:/SPHEREx_SOM/record/5th_exploration/SOM/chi2_lup_shallow_50_0.8_0.5_1000_5.pkl\",\n",
+    "output = mapping(shallow_file = \"D:/SPHEREx_SOM/record/5th_exploration/SOM/chi2_lup_shallow_50_0.8_0.5_1000_5.pkl\",\n",
     "                       deep_file = \"D:/SPHEREx_SOM/record/5th_exploration/SOM/chi2_lup_deep_50_0.9_0.4_10_4.pkl\", shallow_data = shallow_data,\n",
-    "                       deep_data = deep_data, shallow_err = shallow_err, deep_err = deep_err, shallow_position = (20, 4), info_data = shallow_info, save_diagram = True)"
+    "                       deep_data = deep_data, shallow_err = shallow_err, deep_err = deep_err, shallow_position = (20, 4), info_data = shallow_info, save_diagram = False, show_diagram = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "236a5ada-0151-4dbd-b681-c88cdef25a99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"D:/SPHEREx_SOM/record/5th_exploration/SOM/chi2_lup_shallow_50_0.8_0.5_1000_5.pkl\", \"rb\") as fh:\n",
+    "    shallow = pickle.load(fh)\n",
+    "\n",
+    "with open(\"D:/SPHEREx_SOM/record/5th_exploration/SOM/chi2_lup_deep_50_0.9_0.4_10_4.pkl\", \"rb\") as fh:\n",
+    "    deep = pickle.load(fh)\n",
+    "\n",
+    "n = 0\n",
+    "dim = 70\n",
+    "comparison_map = np.zeros(dim ** 2).reshape(dim, dim)\n",
+    "comparison_map.fill(np.nan)\n",
+    "\n",
+    "for i in range(0, dim):\n",
+    "    for j in range(0, dim):\n",
+    "        n += 1\n",
+    "        if n % 10 == 0:\n",
+    "            print(n)\n",
+    "        output = mapping(shallow = shallow,deep = deep, shallow_data = shallow_data,\n",
+    "                       deep_data = deep_data, shallow_err = shallow_err, deep_err = deep_err, shallow_position = (i, j), info_data = shallow_info, save_diagram = False, show_diagram = False)\n",
+    "\n",
+    "        if not output[0]:\n",
+    "            comparison_map[i, j] = output[-1] - output[-2]\n",
+    "\n",
+    "plt.pcolor(comparison_map.T, cmap='YlGn') \n",
+    "plt.colorbar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd5ff24-ba38-48af-8cb4-2c9a3808aedd",
    "metadata": {},
    "outputs": [],
    "source": []
